# Rust_Chem_Db

./: Cargo.toml  README.md
entity/src/: post.rs
migration/src/: create_chem_table.rs  lib.rs
src/: main.rs
yew-frontend/: Cargo.toml  index.html
yew-frontend/src/: lib.rs  main.rs
yew-frontend/src/components/atoms/: custom_button.rs  mod.rs  text_input.rs
yew-frontend/src/components/molecules/: custom_form.rs
