[package]
name = "yew-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
gloo = "*"
serde = "*"
serde_json = "*"
stylist = {version = "0.10.0", features = ["yew"]}
wasm-bindgen = "0.2.80"
web-sys = {version = "0.3.57", features = ["HtmlInputElement"]}
yew-router= "0.16.0"
